tests/ui/const-generics/invalid-attributes-on-const-params-78957.stderr
error: the `inline` attribute cannot be used on const parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:6:18
   |
LL | pub struct Foo<#[inline] const N: usize>;
   |                  ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error: the `repr(C)` attribute cannot be used on const parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:11:18
   |
LL | pub struct Baz<#[repr(C)] const N: usize>;
   |                  ^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types

error: the `inline` attribute cannot be used on lifetime parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:14:19
   |
LL | pub struct Foo2<#[inline] 'a>(PhantomData<&'a ()>);
   |                   ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error: the `repr(C)` attribute cannot be used on lifetime parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:19:19
   |
LL | pub struct Baz2<#[repr(C)] 'a>(PhantomData<&'a ()>);
   |                   ^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types

error: the `inline` attribute cannot be used on type parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:22:19
   |
LL | pub struct Foo3<#[inline] T>(PhantomData<T>);
   |                   ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions

error: the `repr(C)` attribute cannot be used on type parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:27:19
   |
LL | pub struct Baz3<#[repr(C)] T>(PhantomData<T>);
   |                   ^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types

error: the `cold` attribute cannot be used on const parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:8:18
   |
LL | pub struct Bar<#[cold] const N: usize>;
   |                  ^^^^
   |
   = help: the `cold` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/invalid-attributes-on-const-params-78957.rs:2:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: the `cold` attribute cannot be used on lifetime parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:16:19
   |
LL | pub struct Bar2<#[cold] 'a>(PhantomData<&'a ()>);
   |                   ^^^^
   |
   = help: the `cold` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: the `cold` attribute cannot be used on type parameters
  --> $DIR/invalid-attributes-on-const-params-78957.rs:24:19
   |
LL | pub struct Bar3<#[cold] T>(PhantomData<T>);
   |                   ^^^^
   |
   = help: the `cold` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 9 previous errors

